# ATM-machine

./: .env  .gitignore  .gitmodules  Cargo.toml  Rocket.toml  rustfmt.toml
atm/: Cargo.toml
atm-web/: Cargo.toml
atm-web/src/: error.rs  main.rs  pool.rs
atm-web/src/routes/: mod.rs
atm-web/src/routes/admin/: account.rs  index.rs  mod.rs  owner.rs  transaction.rs
atm-web/templates/: account_view.html.tera  accounts_view.html.tera  admin_login.html.tera  admin_view.html.tera
atm-web/templates/admin-panel/: account_view.html.tera  accounts_view.html.tera  admin_view.html.tera
atm/src/: currency.rs  error.rs  lib.rs  old_currency.rs
atm/src/account/: mod.rs  owner.rs
atm/src/interface/: diesel_conn.rs  mod.rs  schemas.rs
atm/src/transaction/: mod.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
migrations/20170321204346_test/: up.sql
migrations/20170322095300_atm_machine/: down.sql  up.sql
src/: account.rs  bank.rs  currency.rs  error.rs  lib.rs  main.rs  schema.rs  term.rs  transaction.rs
src/account/: mod.rs  owner.rs  schema.rs
src/interface/: diesel_conn.rs  mod.rs
src/transaction/: mod.rs
