[package]
name = "atm-machine"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]

[dependencies]
uuid = { version = "*", features = ["serde", "v4"] }
rust-crypto = "*"
rand = "*"
chrono = { git = "https://github.com/lifthrasiir/rust-chrono", features = ["serde"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
base64 = "*"
error-chain = "*"
slog = "*"

[[bin]]
name = "atm-interface"
path = "src/bin/interface.rs"
