[package]
name = "atm-machine"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]

[dependencies]
uuid = { version = "*", features = ["serde", "v4"] }
rand = "*"
rust-argon2 = "*"
chrono = { version = "*", features = ["serde"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
base64 = "*"
error-chain = "*"
slog = "*"
cursive = "*"
diesel = { version = "0.11", features = ["postgres", "chrono", "uuid"] }
diesel_codegen = { version = "0.11", features = ["postgres"] }
dotenv = "*"
steel-cent = { path = "steel-cent", features = ["serde_serialize"] }

[[bin]]
name = "atm-interface"
path = "src/bin/interface.rs"

