[package]
name = "atm-web"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]

[dependencies]
atm-lib = { path = "../atm"}
diesel = "*"
r2d2 = "*"
r2d2-diesel = "*"
rocket = "*"
rocket_contrib = {version = "*", default-features = false, features = ["json", "tera_templates", "uuid"]}
rocket_codegen = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
error-chain = "*"
uuid = "*"
