[package]
name = "atm-web"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]

[dependencies]
atm-lib = { path = "../atm"}
diesel = "*"
r2d2 = "*"
r2d2-diesel = "*"
# Currently on rocket 13359d4 
rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json", "tera_templates", "handlebars_templates", "uuid"]}
rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket" }
serde = "*"
serde_derive = "*"
serde_json = "*"
error-chain = "*"
rust-argon2 = "*"
uuid = "*"
slog = "*"
rand = "*"
